# django-drfxios

./: .gitignore  LICENCE  MANIFEST.in  README.rst  setup.cfg
django_drfxios.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
drfxios/: apps.py  context_processors.py
drfxios/static/drfxios/: drfxios.js
