[metadata]
name = django-drfxios
version = 0.2
description = A Django app to simplify communication between frontend and Django Rest Framework
long_description = file: README.rst
url = https://github.com/milano-slesarik/django-drfxios.git
author = Milan Slesarik
author_email = milslesarik@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
[options]
include_package_data = true
packages = find: